--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,43 @@
 # Top of file
-version: 2
-jobs:
-  build:
+# Common config
+# For YAML support of anchors and references, @see http://blog.daemonl.com/2016/02/yaml.html
+common:
+  - &container_config
     docker:
       - image: circleci/golang:1.11.1
     working_directory: /go/src/github.com/Static-Void-Academy/circleci-hello
+  - &get_deps
+    run: go get -d ./...
+version: 2
+jobs:
+  build:
+    <<: *container_config # See common
     steps:
-      - checkout # Checks out the source code
-      - run: echo "Hello World!"
+      - checkout
+      - *get_deps         # See common
+      - run:
+          name: Build the executable
+          command: |
+            echo "Other important command here as example"
+            go build
+      - persist_to_workspace:
+          root: .
+          paths: ./*
+      - store_artifacts:
+          path: ./circleci-hello
+test:
+    <<: *container_config # See common
+    steps:
+      - attach_workspace:
+          at: .
+      - checkout
+      - *get_deps         # See common
+      - run: go test
+workflows:
+  version: 2
+  build_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
